--- a/models/categories/fields.yaml
+++ b/models/categories/fields.yaml
@@ -8,22 +8,22 @@ fields:
         label: aic.faq::lang.form.name
         span: auto
 
-secondaryTabs:
+# secondaryTabs:
 
-    fields:
+#     fields:
 
-        created_at:
-            label: aic.faq::lang.form.created_at
-            type: datepicker
-            mode: date
-            format: Y/m/d
-            minDate: now
-            default: now
+#         created_at:
+#             label: aic.faq::lang.form.created_at
+#             type: datepicker
+#             mode: date
+#             format: Y/m/d
+#             minDate: now
+#             default: now
 
-        updated_at:
-            label: aic.faq::lang.form.updated_at
-            type: datepicker
-            mode: date
-            format: Y/m/d
-            minDate: now
-            default: now
+#         updated_at:
+#             label: aic.faq::lang.form.updated_at
+#             type: datepicker
+#             mode: date
+#             format: Y/m/d
+#             minDate: now
+#             default: now
